--- a/service-name/latest/deployment.yml
+++ b/service-name/latest/deployment.yml
@@ -1,70 +1,34 @@
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  labels:
-    app: ms-validacion-digital
+  name: vuetest
+  namespace: jn-cicd-core
 spec:
+  selector:
+    matchLabels:
+      app: test
   replicas: 1
   template:
+    metadata:
+      labels:
+        app: test
     spec:
       containers:
-        - env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: "default"
-            - name: LOGGER_LEVEL
-              value: INFO
-            - name: TZ
-              value: "America/Mexico_City"
-          envFrom:
-            - secretRef:
-                name: bsi-informix-estandar-data
-            - secretRef:
-                name: bsi-informix-digital-data
-            - secretRef:
-                name: bsi-informix-n2-data
-          name: ms-validacion-digital
+        - name: test
+          image: carlodockerhub/nodejs-env-test
+          resources:
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "400Mi"
+            cpu: "200m"
           ports:
             - containerPort: 8080
-              name: http
-              protocol: TCP
-            - containerPort: 9779
-              name: prometheus
-              protocol: TCP
-            - containerPort: 8778
-              name: jolokia
-              protocol: TCP
-            - containerPort: 8081
-              name: actuator
-              protocol: TCP
-          resources:
-            requests:
-              cpu: 500m
-              memory: 600Mi
-            limits:
-              cpu: 500m
-              memory: 600Mi
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 8081
-              scheme: HTTP
-            initialDelaySeconds: 140
-            periodSeconds: 20
-            timeoutSeconds: 10
-          readinessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /health
-              port: 8081
-              scheme: HTTP
-            initialDelaySeconds: 140
-            periodSeconds: 20
-            timeoutSeconds: 10
-          volumeMounts:
-            - name: application-config
-              mountPath: /deployments/config
-      nodeSelector:
-        node-role.kubernetes.io/compute: "true"
-      volumes:
-        - name: application-config
-          configMap:
-            name: cm-ms-bancoppel-n2bcpl
-            defaultMode: 420
+          envFrom:
+          - secretRef:
+              name: front-kaxan-secret
+          env:
+          - name: NODE_ENV
+            value: "production"
+
